# isthmus

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README_ablation  check_numba_cuda.sh  installation.md  isthmus_prototype.py  main.py  mc_isthmus_ablate.py  parallelMarchingCubes.py  pyproject.toml  setup.py  test.py  unsorted_code.py
Marching_Cubes/: __init__.pyi
dev/: in_v_out_sparta.py  main.py  parallelMarchingCubes.py
doc/: theory.md
envs/: environment.yml  environment_LCC.yml  environment_wout_gpu.yml  requirements_wout_gpu.txt
error_quantification/: error_quantify.py  motion_map_graphics.py
examples/: ablationExample.md  ablationExample.py  tangle.py  utils.py
examples/GPU speedup test/: bench_intersection_A100_results.csv  bench_intersection_P100_results.csv  bench_intersection_V100_results.csv  bench_intersection_results.csv  bench_intersection_test.py  intersection_test.py  plot-speedup.ipynb  speedup.eps  submit_bench.sh  time_scaling.eps
examples/ablation/: ablationExample.md  ablationExample.py  sample.tif  (+5 more)
paraview_tools/: config_manager.py  flow_converter.py  simulation_data.py  sparta_items.py
src/: environment.yml  geometry.py  geometry_gpu.py  grid.py  isthmus.py  isthmus_gpu.py  isthmus_prototype.py  mapping.py  setup.py  utilities.py
testing/: final.surf  forces.dat.0  forces.dat.10  log.sparta  run.sh  shape_types.py  test.py  test_ablate.py  test_intersection.py  unit_tests.py  vox2surf.surf
tests/: gpu_test_wrappers.py  test_intersection.py  test_verification_cases.py
third-party-licenses/: scikit_license.txt
(+30 files in other folders)
