[project]
name = "paraview-tools"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "pyvista",
    "tqdm",
    "tomli; python_version < '3.11'",
]

[project.scripts]
paraview_tools = "paraview_tools.main:main"

[tool.setuptools.packages.find]
include = ["paraview_tools"]